--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - VERIFY_SSL=false
       
       # =============================================================================
-      # CONFIGURAZIONE PROXY
+      # CONFIGURAZIONE PROXY OPZIONALE
       # =============================================================================
       - PROXY=
       - DADDY_PROXY=
