--- a/.github/workflows/build-tvproxy.yml
+++ b/.github/workflows/build-tvproxy.yml
@@ -1,9 +1,6 @@
 name: Build TVProxy EXE
 
 on:
-  push:
-    tags:
-      - 'v*'  # Solo su tag v1.0, v1.1, ecc.
   workflow_dispatch:
 
 jobs:
@@ -11,35 +8,27 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: 📥 Checkout Repository
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.12
+    - name: 🐍 Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.12'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pyinstaller
+    - name: 📦 Install dependencies
+      run: |
+        pip install -r requirements.txt
+        pip install pyinstaller
 
-      - name: Build EXE with PyInstaller
-        run: |
-          pyinstaller --noconfirm --onefile --name TVProxy app.py
-          if exist .env copy .env dist\.env
+    - name: ⚙️ Build EXE with PyInstaller
+      shell: cmd
+      run: |
+        pyinstaller --noconfirm --onefile --name TVProxy app.py
+        if exist .env copy .env dist\.env
 
-      - name: Upload EXE artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: TVProxy-exe
-          path: dist/TVProxy.exe
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          name: TVProxy ${{ github.ref_name }}
-          tag_name: ${{ github.ref_name }}
-          files: dist/TVProxy.exe
+    - name: 📤 Upload EXE Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: TVProxy
+        path: dist/TVProxy.exe
